# shuttle-chat-axum

./: .gitignore  Cargo.toml  Secrets.toml
src/: lib.rs
static/: index.html  main.css  main.js
