[package]
name = "shuttle-chat"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
shuttle-service = { version = "0.7.2", features = ["web-axum"] }
axum = { version = "0.5", features = ["ws"] }
sync_wrapper = "0.1.1"
tower-http = { version = "0.3.5", features = ["fs"] }
tokio = { version = "1.20.1" }
futures = "0.3.25"
tokio-stream = "0.1.11"
